Bootstrap gem added

--- a/app/views/programs/show.html.erb
+++ b/app/views/programs/show.html.erb
@@ -35,5 +35,5 @@
   <%= @program.transfers %>
 </p>
 
-<%= link_to 'Edit', edit_program_path(@program) %> |
-<%= link_to 'Back', programs_path %>
+<%= link_to 'Edit', edit_program_path(@program), class: 'btn btn-primary' %> |
+<%= link_to 'Back', programs_path, class: 'btn btn-primary' %>
