--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -301,7 +301,7 @@
                   </div>
                 </div>
                 <!-- Card Body -->
-
+                <%= line_chart Program.all.count %>
               </div>
             </div>
 
@@ -325,7 +325,7 @@
                   </div>
                 </div>
                 <!-- Card Body -->
-
+                <%= pie_chart Library.group(:name).count %>
               </div>
             </div>
           </div>
