--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,22 +1,30 @@
+<%
+    @models = Dir['app/models/*.rb'].map {|f|
+        File.basename(f, '.*')
+    }
+    puts('models: ' + @models.to_s)
+%>
+
     <!-- Sidebar -->
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
       <!-- Sidebar - Brand -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+      <%=link_to root_path, class: "sidebar-brand d-flex align-items-center justify-content-center" do %>
         <div class="sidebar-brand-icon rotate-n-15">
           <i class="fas fa-laugh-wink"></i>
         </div>
         <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
-      </a>
+      <% end %>
 
       <!-- Divider -->
       <hr class="sidebar-divider my-0">
 
       <!-- Nav Item - Dashboard -->
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">
+        <%= link_to root_path, class: "nav-link" do %>
           <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>Dashboard</span></a>
+          <span>Dashboard</span>
+        <% end %>
       </li>
 
       <!-- Divider -->
@@ -24,20 +32,29 @@
 
       <!-- Heading -->
       <div class="sidebar-heading">
-        Interface
+        Management
       </div>
 
       <!-- Nav Item - Pages Collapse Menu -->
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
           <i class="fas fa-fw fa-cog"></i>
-          <span>Components</span>
+          <span>Agregar</span>
         </a>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Custom Components:</h6>
-            <a class="collapse-item" href="buttons.html">Buttons</a>
-            <a class="collapse-item" href="cards.html">Cards</a>
+            <h6 class="collapse-header">Catalogos</h6>
+            <%
+                @models.each do |modelName|
+                    begin
+            %>
+            <%= link_to( modelName.humanize.capitalize, [:new, modelName.downcase], class: 'collapse-item') %>
+            <%
+                    rescue => ex
+                        logger.error ex.message
+                    end
+                end
+            %>
           </div>
         </div>
       </li>
