--- a/app/views/codes/_form.html.erb
+++ b/app/views/codes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: code, local: true) do |form| %>
+<%= form_with(model: code, local: true ) do |form| %>
   <% if code.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(code.errors.count, "error") %> prohibited this code from being saved:</h2>
@@ -11,10 +11,52 @@
     </div>
   <% end %>
 
+  <%= content_tag(:div, class: "form-group row") do
+    form.label( :code, class: "col-md-4 col-form-label" ) +
+    form.text_field( :code, class: "form-control mb-4 col-md-8", placeholder: "code" )
+  end %>
+
+  <%= content_tag(:div, class: "form-group row") do
+    form.label( :operation, class: "col-md-4 col-form-label" ) +
+    form.select( :operation, options_for_select([["Select a Operation", ""], ["Get", "G"], ["Put", "P"]]),  {}, :class => "browser-default custom-select col-md-8" )
+  end %>
+
+  <%= content_tag(:div, class: "form-group row") do
+    form.label( :description, class: "col-md-4 col-form-label" ) +
+    form.text_area( :description, class: "form-control mb-4 col-md-8 rounded-0", placeholder: "description" )
+  end %>
+
+  <%= content_tag(:div, class: "form-group row") do
+    form.label( :input, class: "col-md-4 col-form-label" ) +
+    form.text_field( :input, class: "form-control mb-4 col-md-8", placeholder: "input" )
+  end %>
+
+  <%= content_tag(:div, class: "form-group row") do
+    form.label( :output, class: "col-md-4 col-form-label" ) +
+    form.text_field( :output, class: "form-control mb-4 col-md-8", placeholder: "output" )
+  end %>
+
+  <%= content_tag(:div, class: "form-group row") do
+    form.label( :home_dir, class: "col-md-4 col-form-label" ) +
+    form.text_field( :home_dir, class: "form-control mb-4 col-md-8", placeholder: "working dir..." )
+  end %>
+
+  <%= content_tag(:div, class: "custom-control custom-checkbox mb-4") do
+    form.check_box( :daily, class: "custom-control-input" ) +
+    form.label( :daily, class: "custom-control-label" )
+  end %>
+
+  <!-- Send button -->
+  <%= form.submit "Send", class: "btn btn-info btn-block" %>
+
+
+<% if false %>
   <div class="field">
     <%= form.label :code %>
     <%= form.text_field :code %>
   </div>
+
+  <div class="h-divider">
 
   <div class="field">
     <%= form.label :operation %>
@@ -49,4 +91,5 @@
   <div class="actions">
     <%= form.submit %>
   </div>
+  <% end %>
 <% end %>
