--- a/app/views/codes/new.html.erb
+++ b/app/views/codes/new.html.erb
@@ -1,5 +1,60 @@
+            <!-- Page Heading -->
+            <div class="card shadow col-lg-3 offset-lg-4 p-5">
+              <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                <h1 class="h4 mb-4 text-gray-800">Codigo Nuevo</h1>
+              </div>
+
+              <%= render 'form', code: @code %>
+            </div>
+
+<% if false %>
+            <!-- Default form contact -->
+<div class="card shadow col-lg-3 offset-lg-4">
+<form class="text-center border border-light p-5" action="#!">
+
+    <p class="h4 mb-4">Contact us</p>
+
+    <!-- Name -->
+    <input type="text" id="defaultContactFormName" class="form-control mb-4" placeholder="Name">
+
+    <!-- Email -->
+    <input type="email" id="defaultContactFormEmail" class="form-control mb-4" placeholder="E-mail">
+
+    <!-- Subject -->
+    <label>Subject</label>
+    <select class="browser-default custom-select mb-4">
+        <option value="" disabled>Choose option</option>
+        <option value="1" selected>Feedback</option>
+        <option value="2">Report a bug</option>
+        <option value="3">Feature request</option>
+        <option value="4">Feature request</option>
+    </select>
+
+    <!-- Message -->
+    <div class="form-group">
+        <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3" placeholder="Message"></textarea>
+    </div>
+
+    <!-- Copy -->
+    <div class="custom-control custom-checkbox mb-4">
+        <input type="checkbox" class="custom-control-input" id="defaultContactFormCopy">
+        <label class="custom-control-label" for="defaultContactFormCopy">Send me a copy of this message</label>
+    </div>
+
+    <!-- Send button -->
+    <button class="btn btn-info btn-block" type="submit">Send</button>
+
+</form>
+</div>
+<!-- Default form contact -->
+<% end %>
+
+
+
+<% if false %>
 <h1>New Code</h1>
 
 <%= render 'form', code: @code %>
 
 <%= link_to 'Back', codes_path %>
+<% end %>
