--- a/app/views/codes/_form.html.erb
+++ b/app/views/codes/_form.html.erb
@@ -1,5 +1,16 @@
 <%= form_with(model: code, local: true ) do |form| %>
   <% if code.errors.any? %>
+    <div class="alert alert-danger" role="alert">
+      <h4 class="alert-heading"><%= pluralize(code.errors.count, "error") %> prohibited this code from being saved:</h4>
+      <hr>
+      <p class="mb-0">
+        <% code.errors.full_messages.each do |message| %>
+          <%= message %><br/>
+        <% end %>
+      </p>
+    </div>
+
+<% if false %>
     <div id="error_explanation">
       <h2><%= pluralize(code.errors.count, "error") %> prohibited this code from being saved:</h2>
 
@@ -9,6 +20,7 @@
         <% end %>
       </ul>
     </div>
+<% end %>
   <% end %>
 
   <%= content_tag(:div, class: "form-group row") do
