--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -2,6 +2,7 @@
     @models = Dir['app/models/*.rb'].map {|f|
         File.basename(f, '.*')
     }
+    @models.sort
     puts('models: ' + @models.to_s)
 %>
 
@@ -11,9 +12,9 @@
       <!-- Sidebar - Brand -->
       <%=link_to root_path, class: "sidebar-brand d-flex align-items-center justify-content-center" do %>
         <div class="sidebar-brand-icon rotate-n-15">
-          <i class="fas fa-laugh-wink"></i>
+          <i class="fas fa-satellite-dish"></i>
         </div>
-        <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+        <div class="sidebar-brand-text mx-3">SFTP Control <sup>2</sup></div>
       <% end %>
 
       <!-- Divider -->
@@ -22,7 +23,7 @@
       <!-- Nav Item - Dashboard -->
       <li class="nav-item active">
         <%= link_to root_path, class: "nav-link" do %>
-          <i class="fas fa-fw fa-tachometer-alt"></i>
+          <i class="fas fa-fw fa-briefcase"></i>
           <span>Dashboard</span>
         <% end %>
       </li>
@@ -52,17 +53,20 @@
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Catalogos</h6>
-            <%
+<%
                 @models.each do |modelName|
-                    begin
-            %>
-            <%= link_to( modelName.humanize.capitalize, [:new, modelName.downcase], class: 'collapse-item') %>
-            <%
-                    rescue => ex
-                        logger.error ex.message
+                    puts modelName
+                    unless ["program_dummy", "program_relationship"].include?(modelName)
+                        begin
+%>
+              <%= link_to( modelName.humanize.capitalize, [:new, modelName.downcase], class: 'collapse-item') %>
+<%
+                        rescue => ex
+                            logger.error ex.message
+                        end
                     end
                 end
-            %>
+%>
           </div>
         </div>
       </li>
