--- a/app/views/libraries/_form.html.erb
+++ b/app/views/libraries/_form.html.erb
@@ -1,5 +1,17 @@
 <%= form_with(model: library, local: true) do |form| %>
+
   <% if library.errors.any? %>
+    <div class="alert alert-danger" role="alert">
+      <h4 class="alert-heading"><%= pluralize(library.errors.count, "error") %> prohibited this library from being saved:</h4>
+      <hr>
+      <p class="mb-0">
+        <% library.errors.full_messages.each do |message| %>
+          <%= message %><br/>
+        <% end %>
+      </p>
+    </div>
+
+    <% if false %>
     <div id="error_explanation">
       <h2><%= pluralize(library.errors.count, "error") %> prohibited this library from being saved:</h2>
 
@@ -9,8 +21,18 @@
         <% end %>
       </ul>
     </div>
+    <% end %>
   <% end %>
 
+  <%= content_tag(:div, class: "form-group row") do
+    form.label( :name, class: "col-md-4 col-form-label" ) +
+    form.text_field( :name, class: "form-control mb-4 col-md-8", placeholder: "library name" )
+  end %>
+
+  <!-- Send button -->
+  <%= form.submit "Send", class: "btn btn-info btn-block" %>
+
+<% if false %>
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
@@ -19,4 +41,5 @@
   <div class="actions">
     <%= form.submit %>
   </div>
+<% end %>
 <% end %>
