--- a/app/views/programs/_form.html.erb
+++ b/app/views/programs/_form.html.erb
@@ -1,5 +1,16 @@
 <%= form_with(model: program, local: true) do |form| %>
   <% if program.errors.any? %>
+    <div class="alert alert-danger" role="alert">
+      <h4 class="alert-heading"><%= pluralize(program.errors.count, "error") %> prohibited this program from being saved:</h4>
+      <hr>
+      <p class="mb-0">
+        <% program.errors.full_messages.each do |message| %>
+          <%= message %><br/>
+        <% end %>
+      </p>
+    </div>
+
+<% if false %>
     <div id="error_explanation">
       <h2><%= pluralize(program.errors.count, "error") %> prohibited this program from being saved:</h2>
 
@@ -9,8 +20,46 @@
         <% end %>
       </ul>
     </div>
+<% end %>
   <% end %>
 
+  <%= content_tag(:div, class: "form-group row") do
+    form.label( :member, class: "col-md-4 col-form-label" ) +
+    form.text_field( :member, class: "form-control mb-4 col-md-8", placeholder: "member" )
+  end %>
+
+  <%= content_tag(:div, class: "form-group row") do
+    form.label( :library_id, class: "col-md-4 col-form-label" ) +
+    form.collection_select( :library_id, Library.all, :id, :name, {}, :class => "browser-default custom-select col-md-8" )
+  end %>
+
+  <%= content_tag(:div, class: "form-group row") do
+    form.label( :source_file_id, class: "col-md-4 col-form-label" ) +
+    form.collection_select( :source_file_id, SourceFile.all, :id, :name, {}, :class => "browser-default custom-select col-md-8" )
+  end %>
+
+  <%= content_tag(:div, class: "form-group row") do
+    form.label( :code_id, class: "col-md-4 col-form-label" ) +
+    form.collection_select( :code_id, Code.all, :id, :name, {}, :class => "browser-default custom-select col-md-8" )
+  end %>
+
+  <%= content_tag(:div, class: "form-group row") do
+    form.label( :transfers, class: "col-md-4 col-form-label" ) +
+    form.number_field( :transfers, class: "form-control mb-4 col-md-8", placeholder: "transfers" )
+  end %>
+
+  <%= content_tag(:div, class: "custom-control custom-checkbox row" ) do
+    form.check_box( :is_sftp, {class: "custom-control-input col-1"}, "true", "false") +
+    form.label( :is_sftp, class: "custom-control-label col-5" ) +
+    form.check_box( :is_ready, {class: "custom-control-input col-1"}, "true", "false") +
+    form.label( :is_ready, class: "custom-control-label col-5" )
+  end %>
+
+<hr/>
+
+  <!-- Send button -->
+  <%= form.submit "Send", class: "btn btn-info btn-block" %>
+<% if false %>
   <div class="field">
     <%= form.label :member %>
     <%= form.text_field :member %>
@@ -49,4 +98,5 @@
   <div class="actions">
     <%= form.submit %>
   </div>
+<% end %>
 <% end %>
