--- a/app/views/programs/new.html.erb
+++ b/app/views/programs/new.html.erb
@@ -1,5 +1,18 @@
+            <!-- Page Heading -->
+            <div class="card shadow col-lg-3 offset-lg-4 p-5">
+              <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                <h1 class="h4 mb-4 text-gray-800">Programa Nuevo</h1>
+              </div>
+
+              <%= render 'form', program: @program %>
+            </div>
+
+
+<% if false %>
 <h1>New Program</h1>
 
 <%= render 'form', program: @program %>
 
 <%= link_to 'Back', programs_path %>
+
+<% end %>
