--- a/app/views/source_files/_form.html.erb
+++ b/app/views/source_files/_form.html.erb
@@ -1,5 +1,16 @@
 <%= form_with(model: source_file, local: true) do |form| %>
   <% if source_file.errors.any? %>
+    <div class="alert alert-danger" role="alert">
+      <h4 class="alert-heading"><%= pluralize(source_file.errors.count, "error") %> prohibited this Source File from being saved:</h4>
+      <hr>
+      <p class="mb-0">
+        <% source_file.errors.full_messages.each do |message| %>
+          <%= message %><br/>
+        <% end %>
+      </p>
+    </div>
+
+<% if false %>
     <div id="error_explanation">
       <h2><%= pluralize(source_file.errors.count, "error") %> prohibited this source_file from being saved:</h2>
 
@@ -9,8 +20,25 @@
         <% end %>
       </ul>
     </div>
+<% end %>
   <% end %>
 
+  <%= content_tag(:div, class: "form-group row") do
+    form.label( :name, class: "col-md-4 col-form-label" ) +
+    form.text_field( :name, class: "form-control mb-4 col-md-8", placeholder: "name" )
+  end %>
+
+  <%= content_tag(:div, class: "form-group row") do
+    form.label( :library_id, class: "col-md-4 col-form-label" ) +
+    form.collection_select( :library_id, Library.all, :id, :name, {}, :class => "browser-default custom-select col-md-8" )
+  end %>
+
+  <hr/>
+  <!-- Send button -->
+  <%= form.submit "Send", class: "btn btn-info btn-block" %>
+
+
+<% if false %>
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
@@ -24,4 +52,5 @@
   <div class="actions">
     <%= form.submit %>
   </div>
+<% end %>
 <% end %>
