--- a/app/views/source_files/new.html.erb
+++ b/app/views/source_files/new.html.erb
@@ -1,5 +1,19 @@
+            <!-- Page Heading -->
+            <div class="card shadow col-lg-3 offset-lg-4 p-5">
+              <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                <h1 class="h4 mb-4 text-gray-800">Archivo de Fuentes</h1>
+              </div>
+
+              <%= render 'form', source_file: @source_file %>
+            </div>
+
+
+
+<% if false %>
 <h1>New Source File</h1>
 
 <%= render 'form', source_file: @source_file %>
 
 <%= link_to 'Back', source_files_path %>
+
+<% end %>
