--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -14,7 +14,7 @@
         <div class="sidebar-brand-icon rotate-n-15">
           <i class="fas fa-satellite-dish"></i>
         </div>
-        <div class="sidebar-brand-text mx-3">SFTP Control <sup>2</sup></div>
+        <div class="sidebar-brand-text mx-3">SFTP</div>
       <% end %>
 
       <!-- Divider -->
