--- a/app/views/codes/_form.html.erb
+++ b/app/views/codes/_form.html.erb
@@ -30,6 +30,11 @@
   end %>
 
   <%= content_tag(:div, class: "form-group row") do
+    form.label( :system_id, class: "col-md-4 col-form-label" ) +
+    form.collection_select( :system_id, System.all, :id, :name, {}, :class => "browser-default custom-select col-md-8" )
+  end %>
+
+  <%= content_tag(:div, class: "form-group row") do
     form.label( :operation, class: "col-md-4 col-form-label" ) +
     form.select( :operation, options_for_select([["Select a Operation", ""], ["Get", "G"], ["Put", "P"]]),  {}, :class => "browser-default custom-select col-md-8" )
   end %>
