Some changes added

--- a/app/views/codes/_form.html.erb
+++ b/app/views/codes/_form.html.erb
@@ -6,6 +6,7 @@
       <hr>
       <p class="mb-0">
         <% code.errors.full_messages.each do |message| %>
+          <i class="fas fa-exclamation-circle"></i>
           <%= message %><br/>
         <% end %>
       </p>
