--- a/app/views/libraries/edit.html.erb
+++ b/app/views/libraries/edit.html.erb
@@ -1,6 +1,17 @@
+<!-- Page Heading -->
+<div class="card shadow col-lg-3 offset-lg-4 p-5">
+  <div class="d-sm-flex align-items-center justify-content-between mb-4">
+  <h1 class="h4 mb-4 text-gray-800">Editar Libreria</h1>
+  </div>
+
+  <%= render 'form', library: @library %>
+</div>
+
+<% if false %>
 <h1>Editing Library</h1>
 
 <%= render 'form', library: @library %>
 
 <%= link_to 'Show', @library %> |
 <%= link_to 'Back', libraries_path %>
+<% end %>
