--- a/app/views/programs/edit.html.erb
+++ b/app/views/programs/edit.html.erb
@@ -1,6 +1,17 @@
+<!-- Page Heading -->
+<div class="card shadow col-lg-3 offset-lg-4 p-5">
+  <div class="d-sm-flex align-items-center justify-content-between mb-4">
+  <h1 class="h4 mb-4 text-gray-800">Editar Programa</h1>
+  </div>
+
+  <%= render 'form', program: @program %>
+</div>
+
+<% if false %>
 <h1>Editing Program</h1>
 
 <%= render 'form', program: @program %>
 
 <%= link_to 'Show', @program %> |
 <%= link_to 'Back', programs_path %>
+<% end %>
