--- a/app/views/programs/_form.html.erb
+++ b/app/views/programs/_form.html.erb
@@ -1,10 +1,12 @@
 <%= form_with(model: program, local: true) do |form| %>
   <% if program.errors.any? %>
-    <div class="alert alert-danger" role="alert">
-      <h4 class="alert-heading"><%= pluralize(program.errors.count, "error") %> prohibited this program from being saved:</h4>
+    <div id="error-messages" class="alert alert-danger" role="alert">
+      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+      <b class="alert-heading"><%= pluralize(program.errors.count, "error") %> prohibited this program from being saved</b>
       <hr>
       <p class="mb-0">
         <% program.errors.full_messages.each do |message| %>
+        <i class="fas fa-exclamation-circle"></i>
           <%= message %><br/>
         <% end %>
       </p>
